k8s/keycloak-26/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-deployment
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 3
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
      containers:
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.1.0
          args:
            - "--structured-logs"
            - "--port=5432"
            - "--credentials-file=/secrets/cloudsql/credentials.json"
            - "project-id:asia-southeast2:keycloak-db"
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        - name: keycloak
          image: asia-southeast2-docker.pkg.dev/project-id/project-id/keycloak:26.3.3
          args:
            - "start"
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          ports:
          - name: http
            containerPort: 8080
          - name: jgroups-bind
            containerPort: 7800
          - name: jgroups-fd
            containerPort: 57800
